Fixed build issue

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,4 +36,6 @@ repositories {
 
 dependencies {
   implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
+  // app badge for notification
+  implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 }
