--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
   <application>
-    <receiver android:name=".local_notification.LocalNotificationReceiver"/>
-    <receiver android:enabled="true" android:exported="true"  android:name=".local_notification.LocalNotificationRebootReceiver">
+    <receiver android:name=".LocalNotificationsReceiver"/>
+    <receiver android:enabled="true" android:exported="true"  android:name=".LocalNotificationsRebootReceiver">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
             <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
